[package]
name = "evernote"
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"
keywords = ["evernote", "thrift"]
categories = ["web-programming"]
description = "Rust bindings compiled from the Evernote IDL using thrift."
readme = "README.md"
repository = "https://github.com/bdkiesel/evernote.git"
# Only include these in the published crate
include = [
    "src/**",
    "Cargo.toml",
    "README.md",
    "LICENSE"
]

[dependencies]
thrift = "0.17.0"


